--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
         "sass": "^1.32.11",
         "sass-loader": "^11.0.1",
         "tailwindcss": "^3.1.3"
+    },
+    "dependencies": {
+        "flowbite": "^1.4.7"
     }
 }
