--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "tailwindcss": "^3.1.3"
     },
     "dependencies": {
-        "flowbite": "^1.4.7"
+        "flowbite": "^1.4.7",
+        "flowbite-datepicker": "^1.2.1"
     }
 }
